# FreeIX

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile.toml  README.md  deny.toml
.github/workflows/: ci.yml  release.yml
apps/desktop/: index.html  package-lock.json  package.json  tailwind.config.js
apps/desktop/src/: App.tsx
apps/desktop/src-tauri/: Cargo.toml  build.rs  freeix.manifest  tauri.conf.json
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs  tray.rs
apps/desktop/src/components/: Layout.tsx  Toggle.tsx
apps/desktop/src/lib/: api.ts
apps/desktop/src/pages/: Dashboard.tsx  Lists.tsx  Logs.tsx  Settings.tsx  Setup.tsx  Statistics.tsx
apps/desktop/src/styles/: globals.css
core/blocklists/: Cargo.toml
core/blocklists/src/: lib.rs
core/ca/: Cargo.toml
core/ca/src/: lib.rs
core/cache/: Cargo.toml
core/cache/src/: lib.rs
core/config/: Cargo.toml
core/config/src/: lib.rs
core/dns-engine/: Cargo.toml
core/dns-engine/src/: cache.rs  lib.rs  upstream.rs
core/filtering-engine/: Cargo.toml
core/filtering-engine/src/: lib.rs
core/packet-filter/: Cargo.toml
core/packet-filter/src/: lib.rs  windivert_ffi.rs
core/platform/: Cargo.toml
core/platform/src/: lib.rs  linux.rs  macos.rs  windows.rs
core/proxy-engine/: Cargo.toml
core/proxy-engine/src/: filter.rs  lib.rs  proxy.rs  wfp.rs
core/stats/: Cargo.toml
core/stats/src/: lib.rs
docs/: ARCHITECTURE.md  SECURITY.md
extension/: manifest.json  rules.json  youtube.js
scripts/: setup-dev.ps1  setup-dev.sh
tests/integration/: dns_test.rs  filtering_test.rs
