[workspace]
resolver = "2"
members = [
    "core/dns-engine",
    "core/filtering-engine",
    "core/blocklists",
    "core/cache",
    "core/platform",
    "core/config",
    "core/stats",
    "core/ca",
    "core/proxy-engine",
    "core/packet-filter",
    "apps/desktop/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["FreeIX Contributors"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# DNS
hickory-proto = "0.24"

# Networking
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
bytes = "1"

# TLS / Crypto
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pemfile = "2"
rcgen = { version = "0.13", features = ["x509-parser"] }
webpki-roots = "0.26"

# HTTP
hyper = { version = "1", features = ["http1", "http2", "server", "client"] }
hyper-util = { version = "0.1", features = ["tokio", "http1", "http2"] }
http-body-util = "0.1"

# Cache
lru = "0.12"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Filtering
aho-corasick = "1"
regex = "1"

# Concurrency
parking_lot = "0.12"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Utilities
directories = "5"

# Tauri
tauri = { version = "2", features = ["tray-icon"] }
tauri-build = { version = "2", features = [] }
