[package]
name = "freeix-blocklists"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
reqwest = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
directories = { workspace = true }
freeix-filtering-engine = { path = "../filtering-engine" }
