[package]
name = "freeix-filtering-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aho-corasick = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
tokio = { workspace = true }
