[package]
name = "freeix-platform"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
async-trait = "0.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [] }
