[package]
name = "freeix-stats"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rusqlite = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
